--- a/php-fpm/7.2/config/xdebug.ini
+++ b/php-fpm/7.2/config/xdebug.ini
@@ -1,7 +1,8 @@
 # active xdebug
 xdebug.mode=debug
-xdebug.discover_client_host=1
+xdebug.discover_client_host=0
 xdebug.idekey="PHPSTORM"
 xdebug.client_port=9000
 xdebug.max_nesting_level=500
-
+xdebug.client_host=host.docker.internal
+xdebug.start_with_request=yes
