--- a/php-fpm/7.2/Dockerfile
+++ b/php-fpm/7.2/Dockerfile
@@ -2,6 +2,7 @@
 ARG PHP_VERSION="7.2"
 ARG ALPINE_VERSION="3.9"
 ARG APCU_VERSION="5.1.12"
+ARG APCU_BC_VERSION="1.0.5"
 ARG TZ="Europe/Paris"
 ARG LANG="fr_fr.UTF-8"
 ARG LANGUAGE="fr_fr.UTF-8"
