--- a/php-fpm/7.3/Dockerfile
+++ b/php-fpm/7.3/Dockerfile
@@ -126,7 +126,7 @@ RUN apk add --no-cache php7-dev && \
 ##### Release stage #####
 ######################
 # Release image with alias
-FROM base as release
+FROM base as fpm-prod
 
 LABEL org.label-schema.name="opencv" \
       org.label-schema.description="Small OpenCV (Open Source Computer Vision Library) Docker Image for PHP 7.2 Alpine Linux" \
