--- a/php-fpm/7.4/Dockerfile
+++ b/php-fpm/7.4/Dockerfile
@@ -104,7 +104,7 @@ RUN apk add --no-cache \
     echo ${TZ} > /etc/timezone && \
     docker-php-ext-enable opcache && \
     docker-php-ext-install mysqli pdo pdo_mysql && \
-    docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
     docker-php-ext-install gd && \
     docker-php-ext-install soap && \
     docker-php-ext-install calendar && \
